Upgrade that motherfucker colors for a fucking correct dark mode (#7)

--- a/fuckingstyle.scss
+++ b/fuckingstyle.scss
@@ -17,15 +17,15 @@ h3 {
 
 @media (prefers-color-scheme: dark) {
   body {
-    color: #ccc;
-    background: black;
+    color: #c9d1d9;
+    background: #0d1117;
   }
 
   a:link {
-    color: #5bf;
+    color: #58a6ff;
   }
 
   a:visited {
-    color: #ccf;
+    color: #8e96f0;
   }
 }
